<resources>
    <string name="app_name">UI Assignment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lbl_home">Home</string>
    <string name="lbl_doctors">Doctors</string>
    <string name="lbl_appointment">Appointment</string>
    <string name="lbl_profile">Profile</string>
    <string name="welcome_mg_mg">Welcome, Mg Mg</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="consult_with_top_specialists">Consult With Top Specialists</string>
    <string name="consult_with_top_doctors_over_video_calls_and_recover_your_mental_health">Consult with top doctors over Video calls and Recover your mental Health</string>
    <string name="consult_now">Consult Now</string>
    <string name="doctor_specialties">Doctor Specialties</string>
    <string name="_4_5_320">4.5 (320)</string>
    <string name="experience">Experience</string>
    <string name="fees">Fees</string>
    <string name="_12_years">12 years</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="view_all">View All</string>
    <string name="dr_sandy">Dr. Sandy</string>
    <string name="therapist">Therapist</string>
    <string name="_10_yrs">10 Yrs</string>
    <string name="lbl_doctor_des">Dr. Sandy is a top specialist at London Bridge Hospital at London.She has achieved several awards and recognition for is contribution and service in her own field. She is available for private consultation.</string>
    <string name="date">Date</string>
    <string name="write_your_name">Write Your Name</string>
    <string name="gender">Gender</string>
    <string name="write_your_problem">Write your problem</string>
    <string name="age">Age</string>
    <string name="full_name">Full Name</string>
    <string name="patient_details">Patient Details</string>
    <string name="time_slot">Time Slot</string>
    <string name="about_doctor">About Doctor</string>
    <string name="_30000_mmk">30000 MMK</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="upcoming_appointment">Upcoming Appointment</string>
    <string name="december_14_2023">December 14, 2023</string>
    <string name="_08_00_09_00_am">08:00 - 09:00 AM</string>
    <string name="upcoming">Upcoming</string>

</resources>