<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        android:title="@string/lbl_home" />

    <item
        android:id="@+id/doctorsFragment"
        android:icon="@drawable/ic_doctors"
        app:showAsAction="always"

        android:title="@string/lbl_doctors" />
    <item
        android:id="@+id/appointmentFragment"
        android:icon="@drawable/ic_appointment"
        app:showAsAction="always"

        android:title="@string/lbl_appointment" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        app:showAsAction="always"

        android:title="@string/lbl_profile" />

</menu>